--- a/devotional-india/assets/main.css
+++ b/devotional-india/assets/main.css
@@ -127,8 +127,13 @@
 
   @media screen and (min-width:300px) and (max-width:776px)  {
 
+    .main-container .ganesh {
+      margin-top: 4em;
+    }
     .main-container .heading-wrapper h1 {
-        font-size: 28px;
+      max-width: 280px;
+        font-size: 32px;
+        margin-top: 0.7em;
       }
       .main-container .heading-wrapper p {
         font-size: 16px;
@@ -139,8 +144,8 @@
         max-width: 350px;
       }
     .main-container .pray {
-        width: 210px;
-        height: 284px;
+        width: 260px;
+        height: 334px;
       }
       .main-container .pray.hand {
         bottom: -50px;
@@ -194,6 +199,9 @@
   .content {
     width: 100%;
     height: 100vh;
-    padding: 5em 2em;
+    padding: 5em 0;
   }
-  
+
+  .content img {
+    max-width: 300px;
+  }
