--- a/devotional-india/assets/main.css
+++ b/devotional-india/assets/main.css
@@ -198,9 +198,28 @@
 }
 
   .content {
+    position: relative;
     width: 100%;
-    height: 100vh;
     padding: 5em 0;
+    background-image: url(images/bottom-bg.png);
+    background-position: bottom center;
+    background-size:auto;
+    background-repeat: no-repeat;
+  }
+
+  .content .container{
+    max-width: 800px;
+    margin: 0 auto;
+  }
+
+  .content .overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgb(9,9,121);
+    background: linear-gradient(180deg, rgba(9,9,121,0) 50%, rgb(125, 16, 60) 100%);
   }
 
   .content img {
